--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 
 DISCORD_TOKEN=your_discord_bot_token_here
 
-# Google Gemini AI Configuration  
-GEMINI_API_KEY=your_gemini_api_key_here
-
 # Bot Configuration
 BOT_PREFIX=!
+
+# Ollama Configuration (Your Codespace URL)
+OLLAMA_URL=https://your-codespace-url.github.dev/proxy/11434
