--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,6 @@
 
 DISCORD_TOKEN=your_discord_bot_token_here
 
-# Bot Configuration
-BOT_PREFIX=!
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# Ollama Configuration (Your Codespace URL)
-OLLAMA_URL=https://your-codespace-url.github.dev/proxy/11434
+BOT_PREFIX=!
